# oxidized-hack-kit

./: LICENSE  README.md
backend/: .env.example  Cargo.toml
backend/src/: lib.rs  main.rs  response.rs
backend/src/db/: mod.rs  user.rs
backend/src/middlewares/: auth.rs
backend/src/routes/: mod.rs
backend/src/routes/auth/: mod.rs  route.rs
backend/src/routes/user/: mod.rs  route.rs
backend/src/utils/: hash.rs  jwt.rs
frontend/: .env.example  .gitignore  components.json  package.json  tailwind.config.js
frontend/src/: App.svelte  App.tsx  env.ts  main.ts  main.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/account/forms/: Login.tsx  Signup.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/components/custom/layout/: Footer.tsx  Sidebar.tsx
frontend/src/components/custom/layout/Navbars/: WebNav.tsx
frontend/src/hooks/: useToggle.tsx
frontend/src/utils/: axios.ts  formatter.ts
