[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["compression-full", "cors"] }
