[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
bcrypt = "0.15.0"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
    "compression-full",
    "cors",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
